# azan

./: .editorconfig  .gitignore  .justfile  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Package.swift  README.md  rust-toolchain.toml
.claude/: settings.json
android/: build.gradle.kts  settings.gradle.kts
android/azan/: build.gradle.kts
android/azan/src/main/java/org/ibadalrahman/azan/: azan.kt
android/buildSrc/src/main/kotlin/: GradleConfig.kt
android/gradle/: libs.versions.toml
android/miqat/: build.gradle.kts
android/miqat/src/main/java/org/ibadalrahman/miqat/: miqat.kt
apple/Sources/Azan/: AzanBindings.swift
apple/Sources/Azan/Resources/: PrivacyInfo.xcprivacy
apple/Sources/Miqat/: MiqatBindings.swift
apple/Sources/Miqat/Resources/: PrivacyInfo.xcprivacy
azan_core/: Cargo.toml
azan_core/examples/: beirut.rs  prayer_times.rs  umm_al_qura.rs
azan_core/src/: lib.rs  prayer_times.rs
azan_core/src/astronomy/: ops.rs  solar.rs  unit.rs
azan_core/src/hijri/: mod.rs
azan_core/src/models/: high_altitude_rule.rs  method.rs  mod.rs  parameters.rs  prayer.rs
azan_core/src/parser/: dtos.rs
azan_core/src/precomputed/: mod.rs  provider.rs
azan_core/src/precomputed/data/: dar_el_fatwa_beirut.rs  mod.rs
azan_rslib/: Cargo.toml  uniffi.toml
azan_rslib/src/: lib.rs  prayer_times.rs
azan_rslib/src/astronomy/: unit.rs
azan_rslib/src/models/: mazhab.rs  method.rs  prayer.rs  provider.rs
examples/: umm_al_qura.rs
miqat_core/: Cargo.toml
miqat_core/examples/: beirut.rs  events_2026.rs  hijri_observational.rs  prayer_times.rs  umm_al_qura.rs
miqat_core/src/: lib.rs
miqat_core/src/astronomy/: qiblah.rs
miqat_core/src/hijri/: events.rs  mod.rs
miqat_core/src/models/: adjustments.rs  mazhab.rs
miqat_rslib/: Cargo.toml  uniffi.toml
miqat_rslib/src/: lib.rs  prayer_times.rs
miqat_rslib/src/astronomy/: unit.rs
miqat_rslib/src/hijri/: mod.rs
miqat_rslib/src/models/: mazhab.rs  method.rs  mod.rs  prayer.rs  provider.rs
src/: lib.rs  schedule.rs
src/astronomy/: ops.rs  unit.rs
src/models/: adjustments.rs  high_altitude_rule.rs  ishaa_parameter.rs  mazhab.rs  method.rs  mod.rs  parameters.rs  prayer.rs  rounding.rs  twilight.rs
uniffi-bindgen/: Cargo.toml
