[package]
name = "azan"
version = "0.1.0"
authors = [
    "Farhan Ahmed <farhan@themacronaut.com>",
    "Hamza Jadid <hamza.jadid@ibad.org.lb>",
]
edition = "2024"
description = "Islamic prayer time library for Rust"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dev-dependencies]
spectral = "0.6.0"

[dependencies]
chrono = "0.4.41"
