[workspace]
resolver = "3"
members = ["azan_core", "azan_rslib", "uniffi-bindgen"]

[workspace.package]
version = "0.1.0"
authors = ["Hamza Jadid <hamza.jadid@ibad.org.lb>"]
description = "A Rust native library for computing prayer times based on astronomical calculations"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["islam", "prayer", "azan", "adhan", "salat"]
categories = ["astronomical"]
edition = "2024"
repository = "https://github.com/ibad-al-rahman/azan"

[workspace.dependencies]
uniffi = "0.29.4"
