[workspace]
resolver = "3"
members = ["miqat_core", "miqat_rslib", "uniffi-bindgen"]

[workspace.package]
version = "0.3.2"
authors = ["Hamza Jadid <hamza.jadid@ibad.org.lb>"]
description = "A Rust native library for computing prayer times based on astronomical calculations"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["islam", "prayer", "miqat", "adhan", "salat"]
categories = ["astronomical"]
edition = "2024"
repository = "https://github.com/ibad-al-rahman/miqat"

[workspace.dependencies]
uniffi = "0.31.0"
chrono = "0.4.44"
