[package]
name = "azan"
version.workspace = true
authors = [
    "Farhan Ahmed <farhan@themacronaut.com>",
    "Hamza Jadid <hamza.jadid@ibad.org.lb>",
]
edition.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
chrono = "0.4.41"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"

[features]
default = []
json_input = []

[dev-dependencies]
spectral = "0.6.0"
