[package]
name = "azan_rslib"
version = "0.16.1"
edition.workspace = true
publish = false
repository.workspace = true

[lib]
name = "azan"
crate-type = ["cdylib", "staticlib", "lib"]

[profile.release]
opt-level = "z"
lto = "thin"
panic = "abort"
strip = "symbols"

[dependencies]
azan = { version = "*", path = "../azan_core" }
uniffi.workspace = true

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
