[package]
name = "miqat_rslib"
version.workspace = true
edition.workspace = true
publish = false
repository.workspace = true

[lib]
name = "miqat"
crate-type = ["cdylib", "staticlib", "lib"]

[profile.release]
opt-level = "z"
lto = "thin"
panic = "abort"
strip = "symbols"

[dependencies]
miqat = { version = "*", path = "../miqat_core" }
chrono.workspace = true
uniffi.workspace = true

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
